--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,6 +5,6 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%p]-%d %F\:%L\t-%m%n
 
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=../logs/log
+log4j.appender.R.File=../logs/cheetah.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%p]-%d %F\:%L\t-%m%n
