add minute data collect job

--- a/src/main/resources/conf.yaml
+++ b/src/main/resources/conf.yaml
@@ -12,3 +12,8 @@ jobs:
   stockAvgPriceSave:
       classname: com.zhaijiong.stock.scheduler.StockAvgCostSaveJob
       cron: "0 45 9-15 * * ? *"
+  stock15MinuteDataDownload:
+      classname: com.zhaijiong.stock.scheduler.StockMinuteDataDownloadJob
+      type: "15"
+      cron: "0 27 19 * * ? *"
+#      cron: "0 1/15 9-15 * * ? *"
