--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.zhaijiong</groupId>
     <artifactId>cheetah</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>stock</module>
+        <module>crawler</module>
+    </modules>
 
     <properties>
         <maven.test.skip>true</maven.test.skip>
