--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -18,18 +18,6 @@
     </dependency>
 
     <dependency>
-        <groupId>org.apache.hbase</groupId>
-        <artifactId>hbase-client</artifactId>
-        <version>0.99.0</version>
-    </dependency>
-
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-common</artifactId>
-        <version>2.4.0</version>
-    </dependency>
-
-    <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
         <version>1.14</version>
@@ -58,5 +46,17 @@
         <artifactId>webmagic-extension</artifactId>
         <version>0.5.2</version>
     </dependency>
+
+    <dependency>
+        <groupId>dom4j</groupId>
+        <artifactId>dom4j</artifactId>
+        <version>1.6.1</version>
+    </dependency>
+
+    <!--<dependency>-->
+        <!--<groupId>org.elasticsearch</groupId>-->
+        <!--<artifactId>elasticsearch</artifactId>-->
+        <!--<version>1.7.1</version>-->
+    <!--</dependency>-->
 </dependencies>
 </project>
