--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -1,21 +1,26 @@
 hbase.zookeeper.quorum: zhaijiong.com:2181
 zookeeper.znode.parent: /hbase
 database.pool.size: 10
-
+# cron格式
+# Seconds Minutes Hours DayOfMonth Month DayOfWeek Year
+#   ,-*     ,-*    ,-*    ,-*?/LW   ,-*   ,-*?/L#   ,-*
 jobs:
   stockListDownload:
-      classname: com.zhaijiong.stock.scheduler.StockListDownloadJob
-      cron: "0 0 9 ? * 2-6 *"
+    classname: com.zhaijiong.stock.scheduler.StockListDownloadJob
+    cron: "0 0 9 ? * 2-6 *"
   dailyDataDownload:
-      classname: com.zhaijiong.stock.scheduler.DailyDataDownloadJob
-      cron: "0 15/15 9-15 ? * 2-6 *"
+    classname: com.zhaijiong.stock.scheduler.DailyDataDownloadJob
+    cron: "0 0 15 ? * 2-6 *"
   stock15MinuteDataDownload:
-      classname: com.zhaijiong.stock.scheduler.StockMinuteDataDownloadJob
-      type: "15"
-      cron: "0 15/15 9-15 ? * 2-6 *"
+    classname: com.zhaijiong.stock.scheduler.StockMinuteDataDownloadJob
+    type: "15"
+    cron: "0 15/15 9-15 ? * 2-6 *"
   DailyIndicatorsCompute:
-      classname: com.zhaijiong.stock.scheduler.IndicatorsComputeJob
-      cron: "0 0 3 ? * 2-6 *"
+    classname: com.zhaijiong.stock.scheduler.IndicatorsComputeJob
+    cron: "0 0 3 ? * 2-6 *"
   FinanceDataDownload:
-      classname: com.zhaijiong.stock.scheduler.FinanceDataDownloadJob
-      cron: "0 0 0 1 * ? *"
+    classname: com.zhaijiong.stock.scheduler.FinanceDataDownloadJob
+    cron: "0 0 0 1 * ? *"
+  moneyFlowDataDownload:
+    classname: com.zhaijiong.stock.scheduler.MoneyFlowDataDownloadJob
+    cron: "0 37 19 ? * 2-6 *"
