--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -1,6 +1,6 @@
-hbase.zookeeper.quorum: zhaijiong.com:2181
+hbase.zookeeper.quorum: 112.124.60.26:2181
 zookeeper.znode.parent: /hbase
-database.pool.size: 10
+database.pool.size: 20
 # cron格式
 # Seconds Minutes Hours DayOfMonth Month DayOfWeek Year
 #   ,-*     ,-*    ,-*    ,-*?/LW   ,-*   ,-*?/L#   ,-*
@@ -10,11 +10,11 @@ jobs:
     cron: "0 0 0 ? * 2-6 *"
   dailyDataDownload:
     classname: com.zhaijiong.stock.scheduler.DailyDataDownloadJob
-    cron: "0 0 15 ? * 2-6 *"
+    cron: "0 0/5 9-15 ? * 2-6 *"
   stock15MinuteDataDownload:
     classname: com.zhaijiong.stock.scheduler.StockMinuteDataDownloadJob
     type: "15"
-    cron: "0 15/15 9-15 ? * 2-6 *"
+    cron: "0 0/15 9-15 ? * 2-6 *"
   DailyIndicatorsCompute:
     classname: com.zhaijiong.stock.scheduler.IndicatorsComputeJob
     cron: "0 0 3 ? * 2-6 *"
@@ -23,4 +23,4 @@ jobs:
     cron: "0 0 0 1 * ? *"
   moneyFlowDataDownload:
     classname: com.zhaijiong.stock.scheduler.MoneyFlowDataDownloadJob
-    cron: "0 10 15 ? * 2-6 *"
+    cron: "0 0/15 9-15 ? * 2-6 *"
