--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -12,15 +12,22 @@
     <artifactId>crawler</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.zhaijiong</groupId>
-            <artifactId>stock</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>1.2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+
     </dependencies>
 </project>
