--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
             <version>2.3.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.47.1</version>
+        </dependency>
     </dependencies>
 
 
