--- a/crawler/src/main/resources/crawler.yaml
+++ b/crawler/src/main/resources/crawler.yaml
@@ -18,6 +18,11 @@ site.templates:
         date: span#pubtime_baidu
         content: div.art_main
 
-redis.server.address: localhost:6379
-redis.crawl.url: crawled_url
+redis.server.address: 112.124.60.26:6399
 redis.task.queue: task_queue
+redis.index.list: index_list
+redis.index.size: 2000
+
+hbase.zookeeper.quorum: 112.124.60.26:2181
+hbase.zookeeper.znode: /hbase
+hbase.crawled.list: crawled_list
