add commons math dep

--- a/stock/pom.xml
+++ b/stock/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>stock</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.5</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
