--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <maven.test.skip>true</maven.test.skip>
+        <org.springframework.version>4.2.2.RELEASE</org.springframework.version>
     </properties>
 
     <dependencies>
@@ -89,6 +90,19 @@
             <artifactId>selenium-java</artifactId>
             <version>2.47.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+
     </dependencies>
 
 
