--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -4,6 +4,8 @@ database.pool.size: 20
 broker.pool.size: 10
 broker.check.interval: 5
 
+trader.account.id: cheetah
+
 dashboard:
   - "601886"
   - "600376"
