增加夏普率和索提诺比率，更新excel输出项

--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -5,6 +5,8 @@ broker.pool.size: 10
 broker.check.interval: 5
 
 trader.account.id: cheetah
+trader.execl.base.dir: "/home/eryk"
+trader.trading.day.count: 1000
 
 dashboard:
   - "601886"
