--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -5,7 +5,7 @@ broker.pool.size: 10
 broker.check.interval: 5
 
 trader.account.id: cheetah
-trader.execl.base.dir: "/home/eryk"
+trader.execl.base.dir: "/home/eryk/stocks"
 trader.trading.day.count: 1000
 
 dashboard:
