--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -41,3 +41,13 @@ jobs:
   moneyFlowDataDownload:
     classname: com.zhaijiong.stock.scheduler.MoneyFlowDataDownloadJob
     cron: "0 0/15 9-15 ? * 2-6 *"
+
+recommender:
+  goldenSpiderRecommender:
+    name: goldenSpiderRecommender  #需要与recommender.xml配置的bean的id一致
+    stockPool: small  #参考stockPool
+    interval: 60  #单位：秒
+  macdRecommender:
+    name: macdRecommender
+    stockPool: small
+    interval: 300
