--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -5,7 +5,9 @@ broker.pool.size: 10
 broker.check.interval: 5
 
 trader.account.id: cheetah
+#回测结果输出目录
 trader.execl.base.dir: "/home/eryk/stocks"
+#回测执行天数
 trader.trading.day.count: 1000
 
 dashboard:
@@ -19,7 +21,8 @@ dashboard:
   - "600030"
 
 account:
-  - "002317"
+  - "002271"
+  - "600108"
 
 recommender:
   goldenSpiderRecommender:
