修改macd策略，按照小时级别推荐

--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -29,7 +29,7 @@ recommender:
     name: goldenSpiderRecommender  #需要与recommender.xml配置的bean的id一致
     stockPool: small  #参考stockPool
     interval: 180  #单位：秒
-  macdRecommender:
-    name: macdRecommender
+  combinedRecommender:
+    name: combinedRecommender
     stockPool: small
     interval: 180
