将download数据模块抽取出来

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
     <modules>
         <module>stock</module>
         <module>crawler</module>
-        <module>web</module>
+        <module>analyze</module>
+        <module>datacenter</module>
     </modules>
 
     <properties>
