--- a/stock/src/main/resources/conf.yaml
+++ b/stock/src/main/resources/conf.yaml
@@ -21,18 +21,18 @@ dashboard:
   - "600030"
 
 account:
-  - "002271"
-  - "002429"
+  - "000421"
+  - "600108"
 
 recommender:
   goldenSpiderRecommender:
     name: goldenSpiderRecommender  #需要与recommender.xml配置的bean的id一致
     stockPool: small  #参考stockPool
     interval: 180  #单位：秒
-  cheetahRecommender:
-    name: cheetahRecommender
-    stockPool: small
-    interval: 180
+#  cheetahRecommender:
+#    name: cheetahRecommender
+#    stockPool: small
+#    interval: 180
 #  dayMACDRecommender:
 #    name: macdRecommender
 #    stockPool: small
