--- a/stock/src/main/resources/application.properties
+++ b/stock/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-redis.address=127.0.0.1
-redis.port=6379
+#redis.address=127.0.0.1
+#redis.port=6379
+redis.address=112.124.60.26
+redis.port=6399
 spring.velocity.checkTemplateLocation=false
 spring.main.web_environment=false
